--- a/src/index.css
+++ b/src/index.css
@@ -14,14 +14,14 @@ body {
 }
 
 .gradient-bg-hero {
-  background-color: #131835;
+  background-color: #132235;
   background-image: radial-gradient(
       at 0% 0%,
-      hsl(231deg 47% 14%) 0%,
+      rgb(34, 41, 80) 0%,
       transparent 50%
     ),
-    radial-gradient(at 50% 0%, hsl(333deg 85% 53%) 0, transparent 50%),
-    radial-gradient(at 100% 0%, hsla(339, 49%, 30%, 1) 0, transparent 50%);
+    radial-gradient(at 50% 0%, rgba(87, 26, 231, 0.63) 0, transparent 50%),
+    radial-gradient(at 100% 0%, rgb(41, 114, 39) 0, transparent 50%);
 }
 
 .gradient-bg-artworks {
@@ -39,14 +39,14 @@ body {
   background-color: #131835;
   background-image: radial-gradient(
       at 20% 100%,
-      hsl(333deg 85% 53%) 0,
+      rgba(237, 216, 33, 0.322) 0,
       transparent 40%
     ),
     radial-gradient(at 50% 120%, hsla(339, 49%, 30%, 1) 0, transparent 40%);
 }
 
 .text-gradient {
-  background: -webkit-linear-gradient(#eee, #333);
+  background: -webkit-linear-gradient(rgba(238, 238, 238, 0.945), rgba(51, 51, 51, 0.445));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
